--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0",
     "gulp-cli": "^2.3.0",
+    "gulp-concat": "^2.6.1",
     "gulp-csso": "^4.0.1",
     "gulp-htmlmin": "^5.0.1",
     "gulp-less": "^4.0.1",
+    "gulp-minify": "^3.1.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
-    "webpack": "^5.4.0",
-    "webpack-stream": "^6.1.0"
+    "webpack": "^5.4.0"
   }
 }
